2000-08-29  Egor Duda  <deo@logos-m.ru>

	* grp.cc (getgroups): fail with EINVAL if array is not large
	enough to hold all supplementary group IDs.

Mon Aug 28 22:03:21 2000  Christopher Faylor <cgf@cygnus.com>

	* signal.cc (_raise): New function.
	* exceptions.cc (unused_sig_wrapper): Remove _raise.
	* sigproc.h (class sigframe): Default frames to skip to zero or suffer
	from exuberant optimization.
	* fhandler_tty.cc (fhandler_tty::write): Set appropriate errno when
	WriteFile to pipe fails.

Fri Aug 25 23:44:48 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.h (pinfo): Un-inline release.
	* pinfo.cc (pinfo::release): Move here from pinfo.h.
	* sigproc.cc (proc_terminate): Remove bogus 'pinfo child' which caused
	strange destruction of random regions of memory when destructor was
	invoked.

Fri Aug 25 21:25:32 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Move set_os_type.
	(_dll_crt0): To here.
	(cygwin_dll_init): And here.
	* external.cc (fillout_pinfo): Use more foolproof method for scanning
	for pids.
	* pinfo.cc (set_myself): Eliminate myself_identity.init.
	* sigproc.cc (wait_sig): Do it here instead to reduce the amount of
	time where there could potentially be two processes with the same pid.
	* spawn.cc (spawn_guts): Eliminate duplicate initialization.
	* include/sys/cygwin.h: Mark unused PID_* elements.

Fri Aug 25 21:49:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* exec.cc (_execve): Change definition according to declaration in
	newlib/libc/include/sys/unistd.h.

Thu Aug 24 22:17:19 2000  Christopher Faylor <cgf@cygnus.com>

	* external.cc (cygwin_internal): Add CW_INIT_EXCEPTIONS to allow cygwin
	exception handling on threads not created by cygwin.
	* sigproc.cc (proc_terminate): Don't release pinfo structs since we are
	exiting.
	* include/sys/cygwin.h: Add CW_INIT_EXCEPTIONS.

Thu Aug 24 17:16:14 2000  Christopher Faylor <cgf@cygnus.com>

	* select.cc (cygwin_select): Correct logic for "always_ready" fds or